[gd_scene load_steps=34 format=2]

[ext_resource path="res://Objects/VFX/Debris/Debris.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Levels/LevelBase/CameraFocus.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Levels/LevelBase/Audio.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Levels/LevelBase/Node.gd" type="Script" id=4]
[ext_resource path="res://Objects/Projectile/Projectile.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Levels/LevelBase/GUI.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Levels/LevelBase/AreaOfInterestHandler.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Levels/LevelBase/LevelBase.gd" type="Script" id=8]
[ext_resource path="res://Objects/Pool/Node2DPool.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Levels/LevelBase/ParticlesManager.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Levels/LevelBase/ProjectilesLoader.gd" type="Script" id=11]
[ext_resource path="res://Objects/Scores/Scores.gd" type="Script" id=12]
[ext_resource path="res://Assets/graphics/particle.png" type="Texture" id=13]
[ext_resource path="res://Assets/sounds/hit.ogg" type="AudioStream" id=14]
[ext_resource path="res://Objects/VFX/Destruction/Destruction.tscn" type="PackedScene" id=15]
[ext_resource path="res://Objects/GUI/Label/GameStatus.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/MainMenu/Clouds/Clouds.tscn" type="PackedScene" id=17]
[ext_resource path="res://Objects/VFX/Dust/Dust.tscn" type="PackedScene" id=18]
[ext_resource path="res://Objects/Slingshot/Slingshot.tscn" type="PackedScene" id=21]
[ext_resource path="res://Assets/graphics/return.png" type="Texture" id=22]
[ext_resource path="res://Scenes/LevelCompleted/LevelCompleted.tscn" type="PackedScene" id=25]
[ext_resource path="res://Objects/Score/Score.tscn" type="PackedScene" id=26]
[ext_resource path="res://Assets/sounds/obstacle-rock-hit.ogg" type="AudioStream" id=27]
[ext_resource path="res://Assets/sounds/obstacle-rock-destroyed.ogg" type="AudioStream" id=28]
[ext_resource path="res://Assets/music/wholesome.ogg" type="AudioStream" id=29]
[ext_resource path="res://Assets/sounds/shoot.ogg" type="AudioStream" id=30]
[ext_resource path="res://Scenes/Levels/LevelBase/SangsHandler.gd" type="Script" id=31]
[ext_resource path="res://Scripts/Network/NetworkManager.gd" type="Script" id=32]
[ext_resource path="res://Managers/GameManager.gd" type="Script" id=33]
[ext_resource path="res://Assets/graphics/textures/black1.jpg" type="Texture" id=34]
[ext_resource path="res://Assets/graphics/textures/iranian4.png" type="Texture" id=35]
[ext_resource path="res://Objects/GUI/Label/ResetStatus.tscn" type="PackedScene" id=36]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath("Proxy:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 3,
"values": [ Vector2( 75, 383 ), Vector2( 82, 260 ), Vector2( 146, 126 ), Vector2( 184, 201 ) ]
}

[node name="LevelBase" type="Node2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="LevelNodesPlaceholder" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Level1" parent="LevelNodesPlaceholder" instance_placeholder="res://Scenes/Levels/LevelNodes/Level1.tscn"]

[node name="SangsHandler" type="Node" parent="."]
script = ExtResource( 31 )

[node name="AreaOfInterestHandler" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="ParticlesManager" type="Node" parent="."]
script = ExtResource( 10 )
dust_scene = ExtResource( 18 )
explosion_scene = ExtResource( 15 )
debris_scene = ExtResource( 1 )

[node name="Debris" type="Node" parent="ParticlesManager"]

[node name="Dust" type="Node" parent="ParticlesManager"]

[node name="Explosions" type="Node" parent="ParticlesManager"]

[node name="Slingshot" parent="." instance=ExtResource( 21 )]
position = Vector2( 121, 166 )

[node name="ProjectilesLoader" type="Node" parent="."]
script = ExtResource( 11 )

[node name="Projectile2" parent="ProjectilesLoader" groups=["projectile"] instance=ExtResource( 5 )]
position = Vector2( -7, 384 )
mode = 3
contacts_reported = 1
contact_monitor = true

[node name="Projectile" parent="ProjectilesLoader" groups=["projectile"] instance=ExtResource( 5 )]
position = Vector2( -89, 383 )
mode = 3
contacts_reported = 1
contact_monitor = true

[node name="Proxy" type="Node2D" parent="ProjectilesLoader"]
position = Vector2( 75, 383 )
__meta__ = {
"_editor_description_": "Fake projectile node used to create the load animation with the AnimationPlayer "
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ProjectilesLoader"]
anims/load_projectile = SubResource( 1 )

[node name="CameraFocus" type="Node2D" parent="."]
position = Vector2( 811, 205 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
zoom = 2.0
debug = false

[node name="Camera2D" type="Camera2D" parent="CameraFocus"]
current = true
process_mode = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 0.0
editor_draw_limits = true
__meta__ = {
"_edit_lock_": true
}

[node name="DebugCamera" type="Camera2D" parent="CameraFocus"]
zoom = Vector2( 2, 2 )
process_mode = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 2.0
editor_draw_limits = true
__meta__ = {
"_edit_lock_": true
}

[node name="debug" type="Sprite" parent="CameraFocus"]
visible = false
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.5, 0.5 )
z_index = 3
texture = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="CameraFocus"]

[node name="Scores" type="Node" parent="."]
script = ExtResource( 12 )

[node name="ScoresPool" type="Node" parent="Scores" groups=["pools"]]
script = ExtResource( 9 )
object_scene = ExtResource( 26 )

[node name="Audio" type="Node" parent="."]
script = ExtResource( 3 )

[node name="BGM" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 29 )
autoplay = true
bus = "Music"

[node name="Hit" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 14 )

[node name="ObstacleRockHit" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 27 )

[node name="ObstacleRockDestroyed" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 28 )

[node name="Ball" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 30 )

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="GameStatus" parent="GUI" instance=ExtResource( 16 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -423.0
margin_top = 20.0
margin_right = 177.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.960784, 0.960784, 0.960784, 1 )
custom_colors/font_color_shadow = Color( 0.309804, 0.309804, 0.309804, 1 )
custom_constants/shadow_as_outline = 1
align = 2

[node name="GameTimer" parent="GUI" instance=ExtResource( 16 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = 217.0
margin_top = 20.0
margin_right = 297.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.960784, 0.960784, 0.960784, 1 )
custom_colors/font_color_shadow = Color( 0.309804, 0.309804, 0.309804, 1 )
custom_constants/shadow_as_outline = 1
text = "Timer:"
align = 0

[node name="Score" parent="GUI" instance=ExtResource( 26 )]
position = Vector2( 863, 27 )
grow_direction = "left"

[node name="TouchScreenButton" type="TouchScreenButton" parent="GUI"]
position = Vector2( 32, 32 )
scale = Vector2( 0.6, 0.6 )
normal = ExtResource( 22 )
__meta__ = {
"_edit_group_": true
}

[node name="WaitingOverlay" type="Control" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_bottom = 20.0

[node name="TextureRect" type="TextureRect" parent="GUI/WaitingOverlay"]
anchor_right = 0.741
margin_left = -772.0
margin_top = -785.0
margin_right = 2483.0
margin_bottom = 1005.0
texture = ExtResource( 34 )
stretch_mode = 2

[node name="WaitStatus" parent="GUI/WaitingOverlay" instance=ExtResource( 16 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -608.0
margin_top = -359.0
margin_right = 608.0
margin_bottom = 361.0
custom_colors/font_color = Color( 0.759698, 0.748489, 0.972656, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Waiting For Player

Open HaftSangs.ir in Another Tab to Play With Yourself

Wait"

[node name="ResetOverlay" type="Control" parent="GUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_bottom = 20.0

[node name="TextureRect" type="TextureRect" parent="GUI/ResetOverlay"]
anchor_right = 0.741
margin_left = -772.0
margin_top = -785.0
margin_right = 2483.0
margin_bottom = 1005.0
texture = ExtResource( 35 )
stretch_mode = 2

[node name="ResetStatus" parent="GUI/ResetOverlay" instance=ExtResource( 36 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -608.0
margin_top = -359.0
margin_right = 608.0
margin_bottom = 361.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "NEW ROUND"

[node name="GameEndScreen" type="CanvasLayer" parent="."]

[node name="LevelCompleted" parent="GameEndScreen" instance=ExtResource( 25 )]

[node name="NetworkManager" type="Node" parent="."]
script = ExtResource( 32 )

[node name="GameManager" type="Node" parent="."]
script = ExtResource( 33 )

[node name="Clouds" parent="." instance=ExtResource( 17 )]
position = Vector2( 8, -403 )

[connection signal="sang_moved" from="SangsHandler" to="Scores" method="_on_SangsHandler_sang_moved"]
[connection signal="sang_moved" from="SangsHandler" to="Audio" method="_on_SangsHandler_sang_moved"]
[connection signal="projectile_launched" from="Slingshot" to="ProjectilesLoader" method="_on_Slingshot_projectile_launched"]
[connection signal="projectile_launched" from="Slingshot" to="CameraFocus" method="_on_Slingshot_projectile_launched"]
[connection signal="projectile_launched" from="Slingshot" to="Audio" method="_on_Slingshot_projectile_launched"]
[connection signal="level_finished" from="ProjectilesLoader" to="." method="_on_ProjectilesLoader_level_finished"]
[connection signal="points_gained" from="Scores" to="GUI" method="_on_Scores_points_gained"]
[connection signal="released" from="GUI/TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
